unicard_types_macro/tests/ui/struct_normal_test.stderr
error[E0277]: the trait bound `*const i32: unicard_types::WasmType32` is not satisfied
 --> tests/ui/struct_normal_test.rs:9:12
  |
9 |     inner: *const i32
  |            ^^^^^^^^^^ the trait `unicard_types::WasmType32` is not implemented for `*const i32`
  |
  = help: the trait `unicard_types::WasmType32` is implemented for `i32`
